--- a/app/globals.css
+++ b/app/globals.css
@@ -165,7 +165,7 @@ body {
   background: #34d399;
   transform:
     translate(-50%, -50%)
-    rotateY(-25deg) rotateX(15deg) rotateZ(10deg)
+    rotateY(-15deg) rotateX(15deg) rotateZ(10deg)
     translateZ(50px);
   animation-delay: 0.2s;
 }
@@ -186,7 +186,7 @@ body {
   padding: 0.6rem 1.5rem;
   transform:
     translate(-50%, -50%)
-    rotateY(-25deg) rotateX(15deg) rotateZ(10deg)
+    rotateY(-15deg) rotateX(15deg) rotateZ(10deg)
     translateZ(50px);
   animation-delay: 0.4s;
 }
@@ -197,9 +197,29 @@ body {
   background: #34d399;
   transform:
     translate(-50%, -50%)
-    rotateY(-20deg) rotateX(15deg) rotateZ(10deg)
+    rotateY(-15deg) rotateX(15deg) rotateZ(10deg)
     translateZ(30px);
   animation-delay: 0.6s;
+}
+.bubble-4 {
+  top: 73%;
+  left: 60%;
+  background: #ffffff;
+  color: #333;
+  white-space: normal;
+
+  /* 2) Que el ancho sea automático y se ajuste al contenido */
+  width: 12rem;
+  max-width: none;
+  display: inline-block;
+
+  /* opcional: un poco más de padding si quieres margen extra */
+  padding: 0.6rem 1.5rem;
+  transform:
+    translate(-50%, -50%)
+    rotateY(-15deg) rotateX(15deg) rotateZ(10deg)
+    translateZ(50px);
+  animation-delay: 0.8s;
 }
 
 /* 4. Animación de entrada (“pop in”) */
